RESOLVED FIXED80652
Fix the build of WebKit with WTFURL following the removal of ForwardingHeaders/wtf
https://bugs.webkit.org/show_bug.cgi?id=80652
Summary Fix the build of WebKit with WTFURL following the removal of ForwardingHeader...
Benjamin Poulain
Reported 2012-03-08 16:07:19 PST
WebKit does not compile with WTFURL. Just fix the headers.
Attachments
Patch (2.35 KB, patch)
2012-03-08 16:12 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2012-03-08 16:12:25 PST
Eric Seidel (no email)
Comment 2 2012-03-08 20:49:10 PST
Comment on attachment 130932 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=130932&action=review > Source/JavaScriptCore/wtf/url/api/ParsedURL.h:32 > +#include <wtf/url/src/URLSegments.h> I guess src/ is public. :)
WebKit Review Bot
Comment 3 2012-03-08 21:52:34 PST
Comment on attachment 130932 [details] Patch Clearing flags on attachment: 130932 Committed r110261: <http://trac.webkit.org/changeset/110261>
WebKit Review Bot
Comment 4 2012-03-08 21:52:39 PST
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 5 2012-03-08 21:52:52 PST
> I guess src/ is public. :) Yep, everything is in there. API is using other parts of WTF. The src part is independent so you have a chance to adopt if for Chromium. Thanks for the review.
Note You need to log in before you can comment on or make changes to this bug.