Fix the build of WebKit with WTFURL following the removal of ForwardingHeaders/wtf https://bugs.webkit.org/show_bug.cgi?id=80652

Reviewed by Eric Seidel.

Source/JavaScriptCore:

Fix the header, URLSegments.h is not part of the API.

* wtf/url/api/ParsedURL.h:

Source/WebCore:

The fowarding headers have been removed, we must now use the full path to the header.

* platform/KURLWTFURLImpl.h:


Canonical link: https://commits.webkit.org/97857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110261 268f45cc-cd09-0410-ab3c-d52691b4dbfc